# nonebot-plugin-capoo

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_capoo/: __init__.py  config.py  download.py  sqlite.py
